starting over for portfolio and contact htmls

--- a/index.html
+++ b/index.html
@@ -56,8 +56,7 @@
   </div>
   <div class="push"></div>
   </div>
-  <footer class="justify-content-center">name graphics coutesy of <a id="white" target="blank" href="https://flamingtext.com/">FlamingText.com</a><br>
-    background image coutesy of <a id="white" target="blank" href="https://www.toptal.com/designers/subtlepatterns/">Subtlepatterns.com</a>
+  <footer class="justify-content-center">name graphics coutesy of <a id="white" target="blank" href="https://flamingtext.com/">FlamingText.com</a>
   </footer>
 <body>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
