added contact and portfolio html. More words from flamingtext

--- a/portfolio.html
+++ b/portfolio.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Bio</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <title>Portfolio</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" href="assets/styles/style.css">
 </head>
 <div class="wrapper">
-<div class="container">
-<div class="row">
-  <div class="col-12 col-md-6">
-      <img src="https://blog.flamingtext.com/blog/2019/12/07/flamingtext_com_1575681213_398610371.gif">
-      
-  </div>
-  <div class="col-12 col-md-6">
-      <ul id="links" class="nav justify-content-end">
+  <div class="container">
+    <div class="row">
+      <div class="col-12 col-md-6">
+        <img src="https://blog.flamingtext.com/blog/2019/12/07/flamingtext_com_1575681213_398610371.gif">
+
+      </div>
+      <div class="col-12 col-md-6">
+        <ul id="links" class="nav justify-content-end">
           <li class="nav-item">
             <a class="nav-link active" href="index.html">Bio</a>
           </li>
@@ -27,18 +29,61 @@
             <a class="nav-link" href="portfolio.html">Portfolio</a>
           </li>
         </ul>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-12">
+          <img src="https://blog.flamingtext.com/blog/2019/12/07/flamingtext_com_1575694640_398610379.gif">
+      </div>
+    </div>
+    <br>
+    <!--row 2-->
+    <div class="row">
+      <div class="col-md-3">
+        <h3 class="tag">My Weather app</h3>
+        <a href="https://github.com/binrz00/Weather-Dashboard-App"><img src="assets/images/weather.png"
+            class="img-fluid" alt="Responsive image" alt="mygame"></a>
+      </div>
+      <div class="col-md-3">
+        <p class="description">This is my weather app. It will keep the five latest searches on the search area so you can check the weather between two cities.
+          when you return to the weather app your last search will be displayed.
+        </p>
+      </div>
+    </div>
+    <br>
+    <div class="row">
+      <div class="col-md-3">
+        <h3 class="tag">My Day Planner app</h3>
+        <a href="https://github.com/binrz00/Calender-App"><img src="assets/images/me.jpg" class="img-fluid"
+            alt="responsive image"></a>
+      </div>
+      <div class="col-md-3">
+          <p class="description">This is my Dayplanner app. It will hold your events for the day
+            and change color depending on if the time slot is in the past, present, or future.
+          </p>
+        </div>
+    </div>
+    <div class="row">
+      <div class="col-md-3">
+        <h3 class="tag">My Project</h3>
+        <a href="https://github.com/binrz00/narwhal"><img src="assets/images/narwhal.png" class="img-fluid"
+            alt="responsive image"></a>
+      </div>
+      <div class="col-md-3">
+          <p class="description">This is my project NARWHAL. This was a collaberation with 3 other developers.
+            We made NARWHAL to give you news and reviews about your favorite games and movies.
+          </p>
+        </div>
+    </div>
   </div>
-</div>
-
-</div>
   <div class="push"></div>
-  </div>
-  <footer class="justify-content-center">name graphics coutesy of <a id="white" target="blank" href="https://flamingtext.com/">FlamingText.com</a>
-  </footer>
+</div>
+<footer class="justify-content-center">name graphics coutesy of <a id="white" target="blank"
+    href="https://flamingtext.com/">FlamingText.com</a>
+</footer>
+
 <body>
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-<script src="assets/javascript/script.js"></script>
+  <script src="assets/javascript/script.js"></script>
 </body>
+
 </html>
