--- a/contact.html
+++ b/contact.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Bio</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <title>Contact Me</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" href="assets/styles/style.css">
 </head>
 <div class="wrapper">
-<div class="container">
-<div class="row">
-  <div class="col-12 col-md-6">
-      <img src="https://blog.flamingtext.com/blog/2019/12/07/flamingtext_com_1575681213_398610371.gif">
-      
-  </div>
-  <div class="col-12 col-md-6">
-      <ul id="links" class="nav justify-content-end">
+  <div class="container">
+    <div class="row">
+      <div class="col-12 col-md-6">
+        <img src="https://blog.flamingtext.com/blog/2019/12/07/flamingtext_com_1575681213_398610371.gif">
+
+      </div>
+      <div class="col-12 col-md-6">
+        <ul id="links" class="nav justify-content-end">
           <li class="nav-item">
             <a class="nav-link active" href="index.html">Bio</a>
           </li>
@@ -27,18 +29,48 @@
             <a class="nav-link" href="portfolio.html">Portfolio</a>
           </li>
         </ul>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-8">
+          <img src="https://blog.flamingtext.com/blog/2019/12/07/flamingtext_com_1575694488_398610378.png">
+      </div>
+    </div>
+    <br>
+    <div class="row">
+      <div class="col-md-8">
+        <form>
+          <div class="form-group">
+            <label for="name">Name</label>
+            <input type="text" class="form-control" id="nameInput" placeholder="John Smith">
+          </div>
+          <div class="form-group">
+            <label for="formGroupExampleInput2">Email</label>
+            <input type="text" class="form-control" id="emailInput" placeholder="Example@gmail.com">
+          </div>
+          <div class="form-group">
+            <label for="message">Message</label>
+            <input type="text" class="form-control" id="messageInput" placeholder="">
+          </div>
+          <div class="form-group">
+            <button>Submit</button>
+          </div>
+        </form>
+      </div>
+    </div>
   </div>
-</div>
 
-</div>
   <div class="push"></div>
-  </div>
-  <footer class="justify-content-center">name graphics coutesy of <a id="white" target="blank" href="https://flamingtext.com/">FlamingText.com</a>
-  </footer>
+</div>
+<footer class="justify-content-center">name graphics coutesy of <a id="white" target="blank"
+    href="https://flamingtext.com/">FlamingText.com</a>
+</footer>
+
 <body>
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-<script src="assets/javascript/script.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+    crossorigin="anonymous"></script>
+  <script src="assets/javascript/script.js"></script>
 </body>
+
 </html>
