added last photo and links

--- a/contact.html
+++ b/contact.html
@@ -39,6 +39,8 @@
     <br>
     <div class="row">
       <div class="col-md-8">
+        <p>linkedin profile <a href="https://www.linkedin.com/in/brian-zauner-5b77a5195/">here</a></p>
+        <p>git hub profile<a href="https://github.com/binrz00"here></a></p>
         <form>
           <div class="form-group">
             <label for="name">Name</label>
