--- a/portfolio.html
+++ b/portfolio.html
@@ -54,7 +54,7 @@
     <div class="row">
       <div class="col-md-3">
         <h3 class="tag">My Day Planner app</h3>
-        <a href="https://github.com/binrz00/Calender-App"><img src="assets/images/me.jpg" class="img-fluid"
+        <a href="https://github.com/binrz00/Calender-App"><img src="assets/images/calender.png" class="img-fluid"
             alt="responsive image"></a>
       </div>
       <div class="col-md-3">
@@ -65,7 +65,7 @@
     </div>
     <div class="row">
       <div class="col-md-3">
-        <h3 class="tag">My Project</h3>
+        <h3 class="tag">NARWHAL</h3>
         <a href="https://github.com/binrz00/narwhal"><img src="assets/images/narwhal.png" class="img-fluid"
             alt="responsive image"></a>
       </div>
