added links and forms to contact

--- a/portfolio.html
+++ b/portfolio.html
@@ -37,11 +37,18 @@
       </div>
     </div>
     <br>
-    <!--row 2-->
+    <div class="row">
+      <div class="col-md-10">
+        <h5>These are some of the projects I have made. Click the photo to see the code behind the 
+          app, and click the name to see the app in action.
+        </h5>
+      </div>
+    </div>
+    <br>
     <div class="row">
       <div class="col-md-3">
-        <h3 class="tag">My Weather app</h3>
-        <a href="https://github.com/binrz00/Weather-Dashboard-App"><img src="assets/images/weather.png"
+        <a href="https://binrz00.github.io/Weather-Dashboard-App/" target="blank"><h3 id="white">My Weather app</h3></a>
+        <a href="https://github.com/binrz00/Weather-Dashboard-App" target="blank"><img src="assets/images/weather.png"
             class="img-fluid" alt="Responsive image" alt="mygame"></a>
       </div>
       <div class="col-md-3">
@@ -53,8 +60,8 @@
     <br>
     <div class="row">
       <div class="col-md-3">
-        <h3 class="tag">My Day Planner app</h3>
-        <a href="https://github.com/binrz00/Calender-App"><img src="assets/images/calender.png" class="img-fluid"
+        <a href="https://binrz00.github.io/Calender-App/" target="blank"><h3 id="white">My Day Planner</h3></a>
+        <a href="https://github.com/binrz00/Calender-App" target="blank"><img src="assets/images/calender.png" class="img-fluid"
             alt="responsive image"></a>
       </div>
       <div class="col-md-3">
@@ -63,10 +70,11 @@
           </p>
         </div>
     </div>
+    <br>
     <div class="row">
       <div class="col-md-3">
-        <h3 class="tag">NARWHAL</h3>
-        <a href="https://github.com/binrz00/narwhal"><img src="assets/images/narwhal.png" class="img-fluid"
+        <a href="https://binrz00.github.io/narwhal/" target="blank"><h3 id="white">NARWHAL</h3></a>
+        <a href="https://github.com/binrz00/narwhal" target="blank"><img src="assets/images/narwhal.png" class="img-fluid"
             alt="responsive image"></a>
       </div>
       <div class="col-md-3">
