--- a/contact.html
+++ b/contact.html
@@ -39,8 +39,11 @@
     <br>
     <div class="row">
       <div class="col-md-8">
-        <p>linkedin profile <a href="https://www.linkedin.com/in/brian-zauner-5b77a5195/">here</a></p>
-        <p>git hub profile<a href="https://github.com/binrz00"here></a></p>
+        <p>
+          If you would like to contact me on Linkedin click <a id="white" href="https://www.linkedin.com/in/brian-zauner-5b77a5195/">here.</a><br>
+          If you would like to contact me on git hub click <a id="white" href="https://github.com/binrz00">here.</a><br>
+          If you prefer to send me a message please use the form below and I will get back to you as soon as possible.
+        </p>
         <form>
           <div class="form-group">
             <label for="name">Name</label>
@@ -55,7 +58,7 @@
             <input type="text" class="form-control" id="messageInput" placeholder="">
           </div>
           <div class="form-group">
-            <button>Submit</button>
+            <button id="button">Submit</button>
           </div>
         </form>
       </div>
