--- a/contact.html
+++ b/contact.html
@@ -41,6 +41,7 @@
     <div class="row">
       <div class="col-md-8">
         <p>
+          To see my full resume click <a id="white" href="assets/documents/resume.pdf">here</a><br>
           If you would like to contact me on Linkedin click <a id="white" href="https://www.linkedin.com/in/brian-zauner-5b77a5195/">here.</a><br>
           If you would like to contact me on git hub click <a id="white" href="https://github.com/binrz00">here.</a><br>
           If you prefer to send me a message please use the form below and I will get back to you as soon as possible.
