added projects and homeworks

--- a/portfolio.html
+++ b/portfolio.html
@@ -74,6 +74,32 @@
     <br>
     <div class="row">
       <div class="col-md-3">
+        <a href="https://handsome-gentlemen-blogify.herokuapp.com/signup" target="blank"><h3 id="white">Bloggify2.0</h3></a>
+        <a href="https://github.com/binrz00/bloggify-2.0" target="blank"><img src="assets/images/bloggify.png" class="img-fluid"
+            alt="responsive image"></a>
+      </div>
+      <div class="col-md-3">
+          <p class="description">This is a project I worked on with 4 other developers. We set out to create a better
+            blog app then what is currently available. This is what we made so far, it is still getting better.
+          </p>
+        </div>
+    </div>
+    <br>
+    <div class="row">
+      <div class="col-md-3">
+        <a href="sorry.html"><h3 id="white">Team Profile Generator</h3></a>
+        <a href="https://github.com/binrz00/team-profile-generator" target="blank"><img src="assets/images/profile.png" class="img-fluid"
+            alt="responsive image"></a>
+      </div>
+      <div class="col-md-3">
+          <p class="description">This is my team profile generator. It is a CLI that allows you to access all of your team members and 
+            their information so you can contact or review them easily all from one place.
+          </p>
+        </div>
+    </div>
+    <br>
+    <div class="row">
+      <div class="col-md-3">
         <a href="https://binrz00.github.io/narwhal/" target="blank"><h3 id="white">NARWHAL</h3></a>
         <a href="https://github.com/binrz00/narwhal" target="blank"><img src="assets/images/narwhal.png" class="img-fluid"
             alt="responsive image"></a>
